update to deploy

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,6 @@
 python_paths = yatube_api/
 DJANGO_SETTINGS_MODULE = yatube_api.settings
 norecursedirs = env/*
-addopts = -vv -p no:cacheprovider
+addopts = -vv -p no:cacheprovider -p no:warnings --cov
 testpaths = tests/
 python_files = test_*.py
