--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
+gunicorn==20.1.0
 idna==3.2
 importlib-metadata==1.7.0
 iniconfig==1.1.1
