--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       retries: 5
 
   web:
-    image: 1kovalevskiy/api-yatube:latest
+    image: 1kovalevskiy/apiyatube:latest
     restart: always
     ports:
       - "8000:8000"
